# gmail_classifier_speckit

./: .env.example  .github_issue_standalone_binary.md  .gitignore  AGENTS.md  AGENT_RUNBOOK.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_DETAILED.md  CODE_REVIEW_TODOS.md  COMPOUNDING_ENGINEERING.md  ENGINEERING_STANDARDS.md  README.md  SECURITY_AUDIT_REPORT.md  pyproject.toml  research_standalone_binary_best_practices.md
.specify/memory/: constitution.md
docs/: IMAP_FEATURE.md
docs/research/: imap_connection_pooling_research.md
specs/001-gmail-classifier/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-imap-login-support/: data-model.md  plan.md  quickstart.md  research.md  research_imap_label_operations.md  spec.md  tasks.md
tests/: conftest.py
tests/contract/: test_gmail_api.py  test_imap_connection.py
tests/integration/: test_classification_workflow.py  test_cli_commands.py  test_configuration.py  test_error_recovery.py  test_gmail_db_consistency.py  test_imap_auth_flow.py
tests/performance/: __init__.py  test_classification_performance.py  test_email_fetching_performance.py  test_memory_usage.py
todos/: 001-pending-p1-oauth-port-hijacking.md  002-pending-p1-oauth-csrf-vulnerability.md  003-pending-p1-database-transaction-boundaries.md  004-pending-p1-gmail-batch-api.md  005-pending-p1-foreign-key-constraints.md  006-pending-p1-gmail-database-race-condition.md  007-pending-p2-enforce-file-permissions.md  008-pending-p2-streaming-email-processing.md  009-pending-p2-database-indexes-connection-pool.md  010-pending-p2-rate-limiting-api-calls.md  011-pending-p3-refactor-auth-module.md  012-pending-p3-schema-migration-system.md  013-pending-p3-response-caching.md  014-pending-p3-split-config-modules.md  015-pending-p3-integration-tests.md  016-pending-p1-ssl-tls-certificate-verification.md  017-pending-p1-passwords-in-memory-cleanup.md  018-pending-p1-email-entity-duplication.md  019-pending-p1-bare-exception-catching.md  020-pending-p2-session-timeout-cleanup.md  021-pending-p2-password-validation.md  022-pending-p2-email-batch-fetching.md  022-resolved-p2-email-batch-fetching.md  023-pending-p2-memory-efficient-parsing.md  024-pending-p2-dependency-injection.md  025-pending-p3-exponential-backoff.md  025-resolved-p3-exponential-backoff.md  026-pending-p3-folder-cache-ttl.md  027-pending-p3-duplicated-validation.md  028-pending-p3-error-message-sanitization.md  029-pending-p3-rate-limiting.md  029-resolved-p3-rate-limiting.md  030-pending-p3-missing-type-hints.md  031-pending-p3-import-organization.md  032-pending-p3-regex-recompilation.md  033-pending-p3-flag-checking.md  034-pending-p3-context-managers.md  035-ready-p1-password-memory-security-false-claim.md  036-ready-p1-typeddict-bytes-key-mismatch.md  037-ready-p1-email-id-type-inconsistency.md  (+5 more)
(+44 files in other folders)
